Fix unwanted overflow on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ main{
 .container__text {
     flex:1;  
     width: auto;
-    min-width: 210px;
+    min-width: 216px;
     padding-left:1.3em;
     font-family: 'Space Mono';
     font-size: 1.125rem;
@@ -54,7 +54,7 @@ main{
     font-weight: 700;
     font-size: 3rem;
     max-width:12em;
-    line-height: 95px;
+    line-height: 4.4rem;
     letter-spacing: -0.035em;
 }
 .container__description{
@@ -66,6 +66,8 @@ main{
 }
 
 .container__back-link{
+    width: 216px;
+    height: 68px;
     padding:24px 43px;
     background-color: #333;
     text-decoration: none;
@@ -74,7 +76,6 @@ main{
     text-transform: uppercase;
     font-size:14px;
     line-height: 20.73px;
-
 }
 /* Footer */
 
